# Aura-Connect

./: .gitignore  Cargo.toml  NOTICE.md  build.rs
assets/icon/: rustssh.icns
doc/: QA_快速连接.md  SSH数据接收处理全链路分析.md  SSH连接与凭据安全链路分析.md  Tabby Vault 密码保存逻辑分析.md  iced_ui架构与异步限制.md  iced能力边界与终端重构指南.md  libghostty_API_清单与调用规范.md  产品文档.md  动画使用规范.md  名词定义.md  名词术语.md  图标风格规范设计.md  多语言适配方案与开发规范.md  弹窗设计规范.md  待办.md  快速连接入口_流程与状态机.md  系统架构.md  组件设计规范.md  终端GPU显示异常问题复盘.md  终端区域无显示问题复盘.md  终端大文件显示丢失问题_复盘_v2.md  终端模块_1.0与2.0方案对比与优化点.md  终端模块开发指南.md  终端模块开发方案.md  终端焦点丢失问题复盘.md  终端网格命中测试排查复盘.md  自动化诊断程序使用说明书.md  设计系统_色卡.md  顶栏.md
doc/产品/: 产品规格文档.md
doc/废弃代码/: GPU渲染实现文档.md
doc/模块/: Theme_Theme模块.md  _TEMPLATE_产品规格.md  _TEMPLATE_技术规格.md  主页布局结构分析.md  会话连接.md  保险箱（Vault）产品规格.md  保险箱（Vault）技术规格.md  终端配色方案.md  设置中心.md
doc/模块/设计/: 会话管理_设置中心.md  新建会话_设计稿.md  终端信息栏_BreadcrumbBar.md  设置中心_设计规范.md  连接管理_设置中心.md  顶栏_设计规范.md
doc/色彩规范/: 主题_Dark.md  主题_GitHub.md  主题_Light.md  使用规范与示例.md  设计系统_色卡.md
doc/设计规范/: 图标规范.md
doc/进度/: 终端模块.md
doc/进度/terminal260401/: idle_120s.csv  p2_1_idle_120s.csv  p2_1_longrun_1800s.csv  p2_1_meta.json  (+1 more)
scripts/: README.md  keyboard_matrix.sh  p2_1_collect.sh  perf_baseline.sh  performance_gate.sh  terminal_gpu_regression.sh
src/: app.rs  app_model.rs  app_state.rs  connection_input.rs  icons.rs  lib.rs  logging.rs  main.rs  prof.rs  repository.rs  session.rs  session_manager.rs  settings.rs  storage.rs  term_diag.rs  terminal_core.rs  terminal_selection.rs  time_utils.rs  vault_utils.rs
src/app/: chrome.rs  connection.rs  engine_adapter.rs  message.rs  mod.rs  model.rs  settings_modal.rs  ssh_session_manager.rs  state.rs  terminal_event.rs  terminal_host.rs  terminal_viewport.rs  terminal_widget.rs  view.rs
src/backend/: ghostty_ffi.rs  ghostty_vt.rs  mock_session.rs  mod.rs  port_forward.rs  shared_ssh_session.rs  ssh_session.rs
src/i18n/: en_us.rs  mod.rs  zh_cn.rs
src/iced_app/: chrome.rs  components.rs  engine_adapter.rs  message.rs  mod.rs  session_manager.rs  settings_modal.rs  state.rs  subscription.rs  terminal_event.rs  terminal_host.rs  terminal_rich.rs  terminal_viewport.rs  terminal_widget.rs  update.rs  view.rs
src/security/: biometric_auth.rs  mod.rs
src/session/: mod.rs  repository.rs  session.rs
src/sftp/: error.rs  file_entry.rs  mod.rs  session.rs  transfer.rs
src/terminal/: backend.rs  controller.rs  diag.rs  display_test.rs  glyph_atlas.rs  gpu_renderer.rs  key_encode.rs  mod.rs  palette.rs  session_bridge.rs  vt_widget.rs
src/theme/: animation.rs  iced_bridge.rs  icons.rs  import_export.rs  layout.rs  liquid_glass.rs  mod.rs  tokens.rs  user_scheme.rs
src/ui/: mod.rs  theme.rs
src/ui-egui/: mod.rs  theme.rs
src/utils/: mod.rs
src/vault/: core.rs  crypto.rs  error.rs  manager.rs  mod.rs  session_credentials.rs
tests/: connection_input_tests.rs  credential_lifecycle_integration.rs  host_key_policy_test.rs  keyboard_matrix.rs  ssh_integration.rs  storage_integration.rs  vault_integration.rs  vault_test.rs
归档/: 设计系统_色卡-废弃.md
(+104 files in other folders)
