[package]
name = "RustSsh"
version = "0.1.0"
edition = "2024"

[features]
# Default to the cross-platform VT core (ghostling-style).
default = ["ghostty-vt"]

# Use libghostty-vt (VT parser + render_state APIs)
ghostty-vt = []

# Enable flamegraph layer on top of the default tracing subscriber (dev profiling).
term-prof = ["dep:tracing-flame"]

[lib]
name = "rust_ssh"
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.102"
argon2 = "0.5.3"
async-trait = "0.1.86"
directories = "6.0.0"
iced = { version = "0.14.0", features = ["wgpu", "tokio", "image", "svg"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
image = "0.25.10"
log = "0.4.29"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "std"] }
tracing-flame = { version = "0.2.0", optional = true }
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
secrecy = "0.10.3"
thiserror = "2.0.18"
tokio = { version = "1.43.0", features = ["full", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.22.0", features = ["v4"] }
zeroize = { version = "1.8.2", features = ["zeroize_derive", "serde"] }
russh = "0.57.0"
russh-sftp = "2.1"
russh-keys = "0.45.0"
ssh-key = "0.6.7"
vte = "0.15.0"
# libghostty-sys = { git = "https://github.com/ghostty-org/ghostty" } # Currently yanked on crates.io, tracked via local FFI
futures = "0.3.32"
ab_glyph = "0.2.32"
ttf-parser = "0.25.1"
unicode-segmentation = "1.13.2"
unicode-width = "0.2.2"
rfd = "0.15"
dirs = "6"

[dev-dependencies]
proptest = "1.6.0"
mockall = "0.13.1"
tempfile = "3.17.1"

[build-dependencies]
bindgen = "0.71.1"

# cosmic-text 0.15: SubpixelBin::new used `trunc + 1` / `trunc - 1` without
# saturation; huge/inf glyph positions (e.g. Iced text layout after terminal paste)
# can overflow i32 in debug and abort the process.
[patch.crates-io]
cosmic-text = { path = "vendor/cosmic-text" }
